// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default loader 1`] = `
<div
  className="react-spinner-material"
  style={
    Object {
      "borderColor": "white",
      "borderWidth": 2,
      "height": 24,
      "width": 24,
    }
  }
/>
`;

exports[`renders a large loader 1`] = `
<div
  className="react-spinner-material"
  style={
    Object {
      "borderColor": "white",
      "borderWidth": 2,
      "height": 40,
      "width": 40,
    }
  }
/>
`;

exports[`renders a small loader 1`] = `
<div
  className="react-spinner-material"
  style={
    Object {
      "borderColor": "white",
      "borderWidth": 2,
      "height": 18,
      "width": 18,
    }
  }
/>
`;
